--- a/fusionauth/docker-compose.yaml
+++ b/fusionauth/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   db:
-    image: postgres:14
+    image: postgres:12.9
+    container_name: postgres
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_USER: ${POSTGRES_USER}
@@ -43,6 +44,25 @@ services:
     volumes:
       - search_data:/usr/share/elasticsearch/data
 
+  fusionauth:
+    image: fusionauth/fusionauth-app:latest
+    container_name: fusionauth
+    environment:
+      FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
+      FUSIONAUTH_APP_RUNTIME_MODE: development
+      FUSIONAUTH_APP_URL: http://fusionauth:9011
+      SEARCH_SERVERS: http://search:9200
+      SEARCH_TYPE: elasticsearch
+
+    networks:
+      - db_net
+      - search_net
+    restart: unless-stopped
+    ports:
+      - 9011:9011
+    volumes:
+      - fusionauth_config:/usr/local/fusionauth/config
+
 networks:
   db_net:
     driver: bridge
@@ -51,4 +71,5 @@ networks:
 
 volumes:
   db_data:
+  fusionauth_config:
   search_data:
