--- a/fusionauth/docker-compose.yaml
+++ b/fusionauth/docker-compose.yaml
@@ -2,8 +2,7 @@ version: '3'
 
 services:
   db:
-    image: postgres:12.9
-    container_name: postgres
+    image: postgres:16.0-bookworm
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_USER: ${POSTGRES_USER}
@@ -22,38 +21,53 @@ services:
       - db_data:/var/lib/postgresql/data
 
   search:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
-    container_name: search
+    image: opensearchproject/opensearch:2.11.0
     environment:
       cluster.name: fusionauth
-      bootstrap.memory_lock: "true"
       discovery.type: single-node
-      ES_JAVA_OPTS: ${ES_JAVA_OPTS}
+      node.name: search
+      plugins.security.disabled: true
+      bootstrap.memory_lock: true
+      OPENSEARCH_JAVA_OPTS: ${OPENSEARCH_JAVA_OPTS}
     healthcheck:
-      test: [ "CMD", "curl",  "--fail" ,"--write-out", "'HTTP %{http_code}'", "--silent", "--output", "/dev/null", "http://localhost:9200/" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - search_net
+      interval: 10s
+      retries: 80
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:9200/
     restart: unless-stopped
     ulimits:
       memlock:
         soft: -1
         hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    ports:
+      - 9200:9200 # REST API
+      - 9600:9600 # Performance Analyzer
     volumes:
-      - search_data:/usr/share/elasticsearch/data
+      - search_data:/usr/share/opensearch/data
+    networks:
+      - search_net
 
   fusionauth:
     image: fusionauth/fusionauth-app:latest
-    container_name: fusionauth
+    depends_on:
+      db:
+        condition: service_healthy
+      search:
+        condition: service_healthy
     environment:
+      DATABASE_URL: jdbc:postgresql://db:5432/fusionauth
+      DATABASE_ROOT_USERNAME: ${POSTGRES_USER}
+      DATABASE_ROOT_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
-      FUSIONAUTH_APP_RUNTIME_MODE: development
+      FUSIONAUTH_APP_RUNTIME_MODE: fusionauth_development
       FUSIONAUTH_APP_URL: http://fusionauth:9011
       SEARCH_SERVERS: http://search:9200
       SEARCH_TYPE: elasticsearch
-
+      FUSIONAUTH_APP_KICKSTART_FILE: ${FUSIONAUTH_APP_KICKSTART_FILE}
     networks:
       - db_net
       - search_net
@@ -62,6 +76,7 @@ services:
       - 9011:9011
     volumes:
       - fusionauth_config:/usr/local/fusionauth/config
+      - ./kickstart:/usr/local/fusionauth/kickstart
 
 networks:
   db_net:
